--- a/packages/esm-patient-growth-chart-app/package.json
+++ b/packages/esm-patient-growth-chart-app/package.json
@@ -36,13 +36,14 @@
   "bugs": {
     "url": "https://github.com/openmrs/openmrs-esm-patient-chart/issues"
   },
-  "dependencies": {
-    "@carbon/react": "^1.12.0",
-    "@hookform/resolvers": "^3.3.1",
-    "lodash-es": "^4.17.21",
-    "react-hook-form": "^7.46.2",
-    "zod": "^3.22.2"
-  },
+ "dependencies": {
+  "@carbon/charts-react": "1.15.1",
+  "@carbon/react": "^1.12.0",
+  "@hookform/resolvers": "^3.3.1",
+  "lodash-es": "^4.17.21",
+  "react-hook-form": "^7.46.2",
+  "zod": "^3.22.2"
+},
   "peerDependencies": {
     "@openmrs/esm-framework": "6.x",
     "@openmrs/esm-patient-common-lib": "9.x",
